# PhishNet

./: .gitignore  Architecture & Design Specification VERSION 2.docx  CMakeLists.txt  CMakePresets.json  Database.cpp  Database.h  Dir_test_clamav.cpp  HomeMenu.cpp  PhishNet.pro  PhishNet2.cpp  PhishNet2.rc  PhishNet2.vcxproj  Project Plan VERSION 2.docx  Requirements Document VERSION 2.docx  Scans.cpp  ScheduleScan.cpp  UIElements.h  customscan.cpp  historypage.h  homepage.h  homepage.ui  lastscanpage.ui  main.cpp  quarantinepage.h  resource.h  resources.qrc  scantypepage.h  scantypepage.ui  schedulescanpage.cpp  schedulescanpage.h  settingspage.cpp  settingspage.h  test_clamav  test_clamav.cpp
.github/workflows/: cmake.yml
GUI/: CMakeLists.txt  historypage.cpp  historypage.ui  main.cpp  mainwindow.cpp  mainwindow.h  quarantinepage.cpp  resources.qrc  scantypepage.cpp  schedulescanpage.cpp  settingspage.cpp  settingspage.h  settingspage.ui
PhishNet2/: PhishNet2.aps  PhishNet2.cpp  PhishNet2.rc  PhishNet2.sln  PhishNet2.vcxproj  PhishNet2.vcxproj.filters  Scans.cpp  ScheduleScan.cpp  UIElements.h  resource.h
PhishNet2/PhishNet2/x64/Debug/: PhishNet2.exe.recipe  PhishNet2.ilk  PhishNet2.res  vc143.idb
PhishNet2/PhishNet2/x64/Debug/PhishNet2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  PhishNet2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
custom-clam-scanner/: CMakeLists.txt
custom-clam-scanner/include/: customscan.h  quickscan.h  scheduler.h  signatureupdater.h  systemscan.h
custom-clam-scanner/src/: Database.cpp  customscan.cpp  quickscan.cpp  scheduler.cpp  signatureupdater.cpp  systemscan.cpp
custom-clam-scanner/ui/: historypage.cpp  historypage.h  homepage.cpp  lastscanpage.cpp  lastscanpage.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  quarantinepage.cpp  quarantinepage.h  quarantinepage.ui  scantypepage.cpp  scantypepage.h  schedulescanpage.cpp  schedulescanpage.h  schedulescanpage.ui  settingspage.cpp  settingspage.h  settingspage.ui
include/: Database.h  customscan.h  quickscan.h  scheduler.h  systemscan.h
src/: Database.cpp  customscan.cpp  main.cpp  quickscan.cpp  scheduler.cpp  scheduler_main.cpp  systemscan.cpp
